--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
     <a href="https://hyperscript.org" target="_blank">///_hyperscript</a>
     <button class="cheatsheet-button" _="on click get #cheatsheet result.showModal()
           on close from #cheatsheet get #cheatsheet result.close()">cheatsheet</button>
-    <a href="" style="margin-left: auto; padding-right: 15px">
+    <a href="https://github.com/DevGrammo/hiper-repl" style="margin-left: auto; padding-right: 15px">
       <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" fill="white" class="bi bi-github"
         viewBox="0 0 16 16">
         <path
