--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
   <title>hyper repl</title>
-  <link rel="stylesheet" href="/css/cm_css_bundle.css" />
+  <link rel="stylesheet" href="css/cm_css_bundle.css" />
   <style>
     :root {
       --resizer-dim: 10px;
@@ -536,7 +536,7 @@
 <body>
   <h1>hyper frame</h1>
   <p>Evaluate your code with <code> shift + enter</code> or click on the <code>play</code> button</p>
-  <div hx-get="/resources/htmx_api.html" hx-trigger="load">
+  <div hx-get="resources/htmx_api.html" hx-trigger="load">
     <p>and what about <code>htmx</code></p>
    </div>
   <script src="https://unpkg.com/hyperscript.org@0.9.8"></script>
